Fixed Mobile Navigation Spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -347,8 +347,8 @@ footer h2 {
 } 
 
 .sticky img {
-  margin-bottom: 0;
-  margin-top: 0;
+  margin-bottom: .5em;
+  /* margin-top: 0; */
   content: url("/images/MainLogoBlack.png");
 }
 
